Implementado el bundle fos_rest, habilitado el serializer y definido el controlador BookController donde se realizan dos peticiones (GET Y POST) mediante anotaciones Rest

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -13,3 +13,8 @@ framework:
     #fragments: true
     php_errors:
         log: true
+
+    serializer:
+        enabled: true
+        mapping:
+            path: ['%kernel.project_dir%/config/serializer/']
